Add parallax scrolling effect

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -16,6 +16,9 @@
 // import core
 @import "core/core";
 
+// import libs
+@import "libs/paraxify";
+
 // import modules
 @import "modules/helper";
 @import "modules/header";
