Fix some parallax bugs

--- a/app/styles/core/_core.scss
+++ b/app/styles/core/_core.scss
@@ -5,10 +5,11 @@
 
 // main
 body {
-@include normalizeBoxSize();
+  @include normalizeBoxSize();
   font-family: $font-family;
   font-weight: $font-weight-regular;
   font-size: $font-size-normal;
   color: $color-primary;
   background-color: #282828;
+  overflow-x: hidden;
 }
