--- a/app/styles/modules/_divider.scss
+++ b/app/styles/modules/_divider.scss
@@ -1,8 +1,10 @@
 .divider {
   height: 20vw;
-  background-size: cover;
   margin-bottom: 4vh;
   margin-top: 4vh;
+
+  background-size: auto 50%;
+  background-repeat: no-repeat;
 
   &-band {
     background-image: url("/images/TrennerBand.jpg");
