Add band section / several changes

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -17,7 +17,7 @@
 @import "core/core";
 
 // import helper
-@import "helper/text";
+@import "helper/float";
 
 // import libs
 @import "libs/paraxify";
@@ -29,3 +29,4 @@
 @import "modules/news";
 @import "modules/divider";
 @import "modules/gigs";
+@import "modules/band";
