--- a/app/styles/core/_core.scss
+++ b/app/styles/core/_core.scss
@@ -9,7 +9,7 @@ body {
   font-family: $font-family;
   font-weight: $font-weight-regular;
   font-size: $font-size-normal;
-  color: $color-primary;
+  color: $color-primary-font;
   background-color: #282828;
   overflow-x: hidden;
 }
