Fix margin on gigs

--- a/app/styles/modules/_gigs.scss
+++ b/app/styles/modules/_gigs.scss
@@ -1,7 +1,9 @@
 .gigs {
 
   &-entry {
-    margin-bottom: 4vh;
+    &:not(:last-child) {
+      margin-bottom: 4vh;
+    }
 
     .line {
       &-highlight {
