--- a/app/styles/modules/_news.scss
+++ b/app/styles/modules/_news.scss
@@ -6,8 +6,11 @@
     background-color: #181818;
     padding: 10px;
     transition: all .3s ease-in-out;
-    margin-bottom: 4vh;
 
+    &:not(:last-child) {
+      margin-bottom: 4vh;
+    }
+    
     p {
       &:first-child {
         margin-top: 0;
