--- a/app/styles/core/_core.scss
+++ b/app/styles/core/_core.scss
@@ -10,7 +10,7 @@ body {
   font-weight: $font-weight-regular;
   font-size: $font-size-normal;
   color: $color-primary-font;
-  background-color: #282828;
+  background-color: $color-secondary;
   overflow-x: hidden;
 }
 
