--- a/app/styles/core/_vars.scss
+++ b/app/styles/core/_vars.scss
@@ -1,6 +1,10 @@
 // Colors
 $color-primary: #000000;
+$color-primary-light: #181818;
 $color-primary-font: #ffffff;
+$color-secondary: #282828;
+$color-tertiary: #BBBBBB;
+$color-highlight: #F44336;
 
 // Fonts
 $font-family: 'Open Sans Condensed', sans-serif;
@@ -11,3 +15,6 @@ $font-size-extra-large: 35px;
 $font-weight-light: 300;
 $font-weight-regular: 400;
 $font-weight-medium: 500;
+
+// Basic Styling
+$margin-default: 4vh;
