--- a/app/styles/helper/_text.scss
+++ b/app/styles/helper/_text.scss
@@ -4,4 +4,12 @@
     overflow: hidden;
     text-overflow: ellipsis;
   }
+
+  &-center {
+    text-align: center;
+  }
+
+  &-right {
+    text-align: right;
+  }
 }
