--- a/app/styles/modules/_header.scss
+++ b/app/styles/modules/_header.scss
@@ -5,8 +5,6 @@ header {
   height: 100vh;
   width: 100vw;
 
-  margin-bottom: 4vh;
-
   .contact {
     position: absolute;
     top: 4vh;
@@ -35,8 +33,8 @@ header {
       }
 
       &:hover {
-        color: #F44336;
-        background-color: #000000;
+        color: $color-highlight;
+        background-color: $color-primary;
       }
     }
   }
