--- a/app/styles/modules/_naviation.scss
+++ b/app/styles/modules/_naviation.scss
@@ -1,5 +1,5 @@
 nav {
-  background-color: #000000;
+  background-color: $color-primary;
   height: 10vh;
   text-align: center;
 
@@ -10,7 +10,6 @@ nav {
     li {
       @include normalizeBoxSize();
       display: inline-block;
-      //width: 20vw;
 
       &:not(:last-child) {
         margin-right: 2.7vw;
@@ -18,7 +17,7 @@ nav {
 
       a {
         text-decoration: none;
-        color: #BBBBBB;
+        color: $color-tertiary;
         font-size: 5.5vh;
         display: block;
         padding-top: 1vh;
@@ -26,7 +25,7 @@ nav {
         transition: all .2s ease-in-out;
 
         &:hover, &:focus {
-          color: #F44336;
+          color: $color-highlight;
         }
       }
     }
