Refactor links and impressum

--- a/app/styles/modules/_news.scss
+++ b/app/styles/modules/_news.scss
@@ -18,6 +18,12 @@
       }
     }
 
+    a {
+      &:hover, &:focus, &:active {
+        color: $color-primary-font;
+      }
+    }
+
     &:hover {
       background-color: $color-highlight;
     }
