Set bootstrap vars properly

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,16 +1,19 @@
-// import 3rd Party
+// import font
 @import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300');
 
+// import bootstrap vars
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/variables";
+
+// import vars
+@import "core/vars";
+
+// import bootstrap
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/mixins";
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/grid";
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/responsive-utilities";
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/responsive-embed";
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/scaffolding";
 @import "../../node_modules/bootstrap-sass/assets/stylesheets/bootstrap/utilities";
-
-// import vars
-@import "core/vars";
 
 //import mixins
 @import "mixins/normalizeBoxSize";
