--- a/app/styles/core/_vars.scss
+++ b/app/styles/core/_vars.scss
@@ -18,3 +18,7 @@ $font-weight-medium: 500;
 
 // Basic Styling
 $margin-default: 4vh;
+
+// Bootstrap setting
+$link-color: $color-primary-font;
+$link-hover-color: $color-highlight;
